Bug 527606: Fix test-lrg failures on JDK9 (core, jpa, sdo)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>